--- a/src/components/UI/AudioVideoControls/AudioVideoControls.scss
+++ b/src/components/UI/AudioVideoControls/AudioVideoControls.scss
@@ -1,7 +1,8 @@
 .audio-video-controls {
   position: absolute;
-  bottom: 25px;
-  left: 25px;
+  z-index: 1;
+  bottom: 10px;
+  right: -3px;
   display: flex;
 
   &__button {
